--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,4 +1,10 @@
 .header{
     height: 70px;
     background-color: #090b13;
+    display: flex;
+    align-items: center;
+    padding: 0 36px;
+}
+.logo{
+    width: 80px;
 }
