--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,8 +3,50 @@
     background-color: #090b13;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0 36px;
 }
 .logo{
     width: 80px;
+}
+.menu{
+    display: flex;
+    align-items: center;
+}
+.menu a{
+    display: flex;
+    align-items: center;
+    padding: 0 12px;
+    cursor: pointer;
+}
+.menu a img{
+    height: 20px;
+}
+.menu a span{
+    font-size: 13px;
+    letter-spacing: 1.42px;
+    position: relative;
+}
+.menu a span::after{
+    content: "";
+    height: 1px;
+    background: white;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -6px;
+    opacity: 0;
+    transform-origin: left center;
+    transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+    transform: scaleX(0);
+}
+.menu a:hover span:after{
+    transform: scaleX(1);
+    opacity: 1;
+}
+.pfpImg{
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    cursor: pointer;
 }
