--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 36px;
+    overflow-x: hidden;
 }
 .logo{
     width: 80px;
