--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,6 +2,7 @@
     min-height: calc(100vh - 70px);
     padding: 0 calc(3.5vw + 5px);
     position: relative;
+    overflow-x: hidden;
 }
 .home::before{
     background: url("../../../public/images/home-background.png") center center / cover no-repeat fixed;
@@ -11,4 +12,5 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: -1;
 }
